Daftar planet.html
Tugas saya

--- a/index.html
+++ b/index.html
@@ -6,6 +6,50 @@
 <body>
     <center>
         <h1>Daftar Planet</h1>
+        <br><br>
+        <table border="1" cellspacing="0" cellpadding="5">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Nomor Planet</th>
+                    <th>Nama Planet</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Merkurius</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Venus</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Bumi</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Mars</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Jupiter</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Saturnus</td>
+                </tr>
+                <tr>
+                    <td72</td>
+                    <td>Neptunus</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Uranus</td>
+                </tr>
+            </body> 
+        </table>   
     </center>
 </body>
 </html>
